# FirewallIA

./: README.md
myappvictor/: Cargo.toml  README.md
myappvictor/myappvictor/: Cargo.toml  build.rs
myappvictor/myappvictor-common/: Cargo.toml
myappvictor/myappvictor-ebpf/: Cargo.toml  build.rs
myappvictor/myappvictor-ebpf/src/: main.rs
myappvictor/myappvictor/src/: main.rs
sniffy/: Cargo.toml
sniffy/src/: main.rs
xdp-drop/: Cargo.toml  build.rs
xdp-drop/proto/: firewall.proto
xdp-drop/proto/include/google/protobuf/: empty.proto
xdp-drop/xdp-drop/: Cargo.toml  build.rs
xdp-drop/xdp-drop-cli/: Cargo.toml  build.rs
xdp-drop/xdp-drop-cli/proto/: firewall.proto
xdp-drop/xdp-drop-cli/src/: main.rs
xdp-drop/xdp-drop-common/: Cargo.toml
xdp-drop/xdp-drop-common/src/: lib.rs
xdp-drop/xdp-drop-ebpf/: Cargo.toml
xdp-drop/xdp-drop-ebpf/src/: main.rs
xdp-drop/xdp-drop-proto/: Cargo.toml
xdp-drop/xdp-drop/src/: main.rs
