# ./Cargo.toml (à la racine du projet)
[workspace]
members = [
    "myappvictor",
    "myappvictor-ebpf",
    "myappvictor-common", # Si vous ajoutez un crate commun
]
resolver = "2"

default-members = ["myappvictor", "myappvictor-common"]

[profile.release.package.myappvictor-ebpf]
debug = 2
codegen-units = 1