[package]
name = "sniffy"
version = "0.1.0"
edition = "2021"

[dependencies]
aya = "0.13"   # Pour la bibliothèque Aya, qui inclut les fonctionnalités pour manipuler eBPF et Cgroups
tokio = { version = "1", features = ["full"] }  # Si tu souhaites utiliser des tâches asynchrones ou une gestion d'événements asynchrone



