[package]
name = "xdp-log-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
aya-ebpf = { git = "https://github.com/aya-rs/aya" }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya" }
myappvictor-common = { path = "../myappvictor-common" }
network-types = "0.0.7"

[build-dependencies]
which = { version = "7.0.0", default-features = false }

[[bin]]
name = "xdp-log"
path = "src/main.rs"