[package]
name = "myappvictor"
version = "0.1.0"
edition = "2021"

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", branch = "main", features = ["async_tokio"] } # Ou une version spécifique
aya-log = { git = "https://github.com/aya-rs/aya", branch = "main" } # Ou une version spécifique
tokio = { version = "1.20", features = ["macros", "rt-multi-thread", "signal"] } # Adaptez la version
anyhow = "1.0"
clap = { version = "4", features = ["derive"] } # Adaptez la version
log = "0.4"
env_logger = "0.10" # Adaptez la version

# Si vous avez un crate commun pour partager des types/constantes
# myappvictor-common = { path = "../myappvictor-common" }

[build-dependencies]
aya-tool = { git = "https://github.com/aya-rs/aya", branch = "main" } # Ou une version spécifique

[workspace]
# Optionnel, si vous avez un workspace à la racine
