# xdp-drop-cli/Cargo.toml

[package]
edition = "2021" # Recommandé

[dependencies]
tonic = "0.11"   # Version alignée avec le serveur
prost = "0.12"   # Version alignée avec le serveur
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
anyhow = "1"
clap = { version = "4", features = ["derive"], optional = true } # Si vous voulez l'utiliser plus tard

[build-dependencies]
tonic-build = "0.11" # Version alignée avec tonic
anyhow = "1"         # Pour la gestion des erreurs dans build.rs
Use code with c