# Fichier : /root/FirewallIA/xdp-drop/xdp-drop-common/Cargo.toml

[package]
name = "xdp-drop-common"
version = "0.1.0"
edition = "2021"

[dependencies]
# Héritez des versions
bytemuck = { workspace = true }
# aya est optionnel ici
aya = { workspace = true, optional = true }

[lib]
crate-type = ["lib", "rlib"]