# Fichier : /root/FirewallIA/xdp-drop/xdp-drop-common/Cargo.toml

[package]
name = "xdp-drop-common"
version = "0.1.0"
edition = "2021"

# Définit les features pour ce crate
[features]
default = []
# La feature "user" est utilisée par le programme principal
# pour activer les dépendances qui ne sont pas nécessaires pour le code eBPF.
user = ["dep:aya"]

[dependencies]
# Hérite des versions du workspace
bytemuck = { version = "1.12", features = ["derive", "zeroable"] }
# aya est une dépendance optionnelle, activée par la feature "user"
aya = { workspace = true, optional = true }

[lib]
crate-type = ["lib", "rlib"]