# Fichier : /root/FirewallIA/xdp-drop/xdp-drop-ebpf/Cargo.toml

[package]
name = "xdp-drop-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
# Héritez des versions du workspace
aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }
network-types = { workspace = true }
xdp-drop-common = { path = "../xdp-drop-common" }

[lib]
path = "src/lib.rs"
crate-type = ["staticlib"]