# Fichier : /root/FirewallIA/xdp-drop/xdp-drop-ebpf/Cargo.toml

[package]
name = "xdp-drop-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
# Hérite des versions définies dans le workspace
aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }
network-types = { workspace = true }
xdp-drop-common = { path = "../xdp-drop-common", default-features = false}

# Dépendances pour le script de build de ce crate eBPF
[build-dependencies]
which = { workspace = true }

[lib]
path = "src/lib.rs"
crate-type = ["staticlib"]