# Fichier : /root/FirewallIA/xdp-drop/xdp-drop-ebpf/Cargo.toml

[package]
name = "xdp-drop-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
# Hérite des versions définies dans le workspace
aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }
network-types = { workspace = true }
xdp-drop-common = { path = "../xdp-drop-common", default-features = false}

# Dépendances pour le script de build de ce crate eBPF
[build-dependencies]
which = { workspace = true }

# AJOUTEZ TOUTE CETTE SECTION
[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort" # <--- LA LIGNE LA PLUS IMPORTANTE
codegen-units = 1

[profile.release]
lto = true
panic = "abort" # <--- LA LIGNE LA PLUS IMPORTANTE
codegen-units = 1

[lib]
path = "src/lib.rs"
crate-type = ["staticlib"]