[package]
name = "xdp-drop"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = {  version = "0.13.1", features = ["async_tokio"] }
aya-log = { version = "0.2.1" }
xdp-drop-common = { path = "../xdp-drop-common", features = ["user"] }
anyhow = "1"
clap = { version = "4.1", features = ["derive"] }
log = "0.4"
tokio = { version = "1.25", features = [
  "macros",
  "rt",
  "rt-multi-thread",
  "net",
  "signal",
] }
bytes = "1"
env_logger = "0.11"
simple_logger = "1.11"
flexi_logger = "0.27"
tokio-postgres = "0.7"
tonic = "0.11"
prost = "0.12.6"
prost-types = "0.12.6"


[build-dependencies]
aya-build = { git = "https://github.com/aya-rs/aya" }
anyhow = "1"
# TODO(https://github.com/rust-lang/cargo/issues/12375): this should be an artifact dependency, but
# it's not possible to tell cargo to use `-Z build-std` to build it. We cargo-in-cargo in the build
# script to build this, but we want to teach cargo about the dependecy so that cache invalidation
# works properly.
#
# Note also that https://github.com/rust-lang/cargo/issues/10593 occurs when `target = ...` is added
# to an artifact dependency; it seems possible to work around that by setting `resolver = "1"` in
# Cargo.toml in the workspace root.
#
# Finally note that *any* usage of `artifact = ...` in *any* Cargo.toml in the workspace breaks
# workflows with stable cargo; stable cargo outright refuses to load manifests that use unstable
# features.
xdp-drop-ebpf = { path = "../xdp-drop-ebpf" }
tonic-build = "0.11"

[[bin]]
name = "xdp-drop"
path = "src/main.rs"
