# Fichier : /root/FirewallIA/xdp-drop/Cargo.toml

[package]
name = "xdp-drop"
version = "0.1.0"
edition = "2021"

# -> SECTION IMPORTANTE À AJOUTER/MODIFIER <-
[workspace]
members = [
    "xdp-drop-common",
    "xdp-drop-ebpf",
]

# Définissez les versions des dépendances ici UNE SEULE FOIS
[workspace.dependencies]
aya = { version = "0.11.0", features = ["async_tokio"] }
aya-log = "0.11.0"
aya-ebpf = "0.11.0"
aya-log-ebpf = "0.11.0"
bytemuck = { version = "1.12", features = ["derive"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.21", features = ["full"] }
network-types = "0.0.5"
# ... et toutes vos autres dépendances (tonic, prost, etc.)

# Définissez les profils ici UNE SEULE FOIS
[profile.dev]
opt-level = 1
debug = true

[profile.release]
opt-level = 3
debug = false
panic = "abort"
lto = true


# VOS DÉPENDANCES POUR CE PACKAGE SPÉCIFIQUE
[dependencies]
# Utilisez la syntaxe `workspace = true` pour hériter des versions
aya = { workspace = true }
aya-log = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
# ... etc ...
xdp-drop-common = { path = "xdp-drop-common" }
xdp-drop-ebpf = { path = "xdp-drop-ebpf" }

# ... votre section [[bin]] ...

[build-dependencies]
aya-builder = "0.11" # ou votre build-dependency actuelle