# Fichier : /root/FirewallIA/xdp-drop/Cargo.toml

[package]
name = "xdp-drop"
version = "0.1.0"
edition = "2021"



# Centralise les profils de compilation
[profile.dev]
opt-level = 1
debug = true
lto = "off"


# Dépendances spécifiques pour le programme user-space
[dependencies]
aya = { workspace = true, features = ["async_tokio"] }
aya-log = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tokio-postgres = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
flexi_logger = { workspace = true }
log = { workspace = true }

# Dépendances vers les autres crates du workspace
xdp-drop-common = { path = "xdp-drop-common", features = ["user"] }


# Dépendances pour le script de build
[build-dependencies]
aya-build = { git = "https://github.com/aya-rs/aya" }
anyhow = { workspace = true } 
tonic-build = { version = "0.10.2", features = ["prost"] }

# Configuration du binaire principal
[[bin]]
name = "xdp-drop"
path = "src/main.rs"